--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,9 @@
-# 0 is too far from ` ;)
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# 0 is too far from '`' ;)
 set -g base-index 1
 
 # Change the prefix from C-b to C-a
@@ -71,9 +76,4 @@ set -g status-left '#[fg=green](#S) #(whoami) '
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white] %a %h-%d %H:%M#[default] #{battery_status_bg} #{battery_percentage}'
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
-
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-battery'
 
