--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,3 @@
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-battery'
-
 # 0 is too far from '`' ;)
 set -g base-index 1
 
@@ -73,7 +68,13 @@ set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami) '
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white] %a %h-%d %H:%M#[default] #{battery_status_bg} #{battery_percentage}'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #{battery_percentage} #[fg=white] %a %h-%d %H:%M#[default] '
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+run '~/.tmux/plugins/tpm/tpm'
