--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,9 @@ bind C-a send-prefix
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
+# Copy mode yanks to the clipboard
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 #set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 10000
