--- a/tmux.conf
+++ b/tmux.conf
@@ -72,6 +72,9 @@ set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #{
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
+# Enable mouse mode (tmux 2.1 and above)
+set -g mouse on
+
 # Plugins
 # set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
