--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # 0 is too far from '`' ;)
-set -g base-index 1
+# set -g base-index 1
 
 # Change the prefix from C-b to C-a
 unbind C-b
@@ -7,8 +7,8 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
+# set-window-option -g automatic-rename on
+# set-option -g set-titles on
 
 # Copy mode yanks to the clipboard
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
@@ -18,8 +18,9 @@ set -g status-keys vi
 set -g history-limit 10000
 
 setw -g mode-keys vi
-# setw -g mode-mouse on
 setw -g monitor-activity on
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection
 
 bind-key v split-window -h
 bind-key s split-window -v
@@ -36,13 +37,13 @@ bind-key M-l resize-pane -R
 
 # Vim style pane selection
 bind h select-pane -L
-bind j select-pane -D 
+bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
+bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
@@ -71,10 +72,11 @@ set -g status-left '#[fg=green](#S) #(whoami) '
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #{battery_percentage} #[fg=white] %a %h-%d %H:%M#[default] '
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
-
+#
 # Plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-battery'
+setw -g window-status-current-style fg=black,bg=white
+#
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 run '~/.tmux/plugins/tpm/tpm'
