--- a/tmux.conf
+++ b/tmux.conf
@@ -70,8 +70,8 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami) '
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #{battery_percentage} #[fg=white] %a %h-%d %H:%M#[default] '
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+bind-key -n C-S-Left swap-window -t -1 \; previous-window
+bind-key -n C-S-Right swap-window -t +1 \; next-window
 #
 # Plugins
 setw -g window-status-current-style fg=black,bg=white
